[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/font/Barlow-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/mainmenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/font/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/music/backsound2.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/misc/SettingsUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/font/Barlow-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/font/Barlow-Italic.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0.556863, 0.556863, 0.556863, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 17
font_data = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Logo" type="Label" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -349.0
margin_top = -233.0
margin_right = 350.0
margin_bottom = -135.0
custom_fonts/font = SubResource( 2 )
text = "Just For Farm!"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_top = -91.0
margin_right = 221.0
margin_bottom = 218.0
custom_constants/separation = 21
__meta__ = {
"_edit_group_": true
}

[node name="Play" type="Button" parent="Main/VBoxContainer"]
margin_right = 442.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="HowToPlay" type="Button" parent="Main/VBoxContainer"]
margin_top = 66.0
margin_right = 442.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "How To Play"

[node name="Settings" type="Button" parent="Main/VBoxContainer"]
margin_top = 132.0
margin_right = 442.0
margin_bottom = 177.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="Credits" type="Button" parent="Main/VBoxContainer"]
margin_top = 198.0
margin_right = 442.0
margin_bottom = 243.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="Exit" type="Button" parent="Main/VBoxContainer"]
margin_top = 264.0
margin_right = 442.0
margin_bottom = 309.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="HowToPlay" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="HowToPlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.0
margin_top = -216.5
margin_right = 343.0
margin_bottom = 216.5
color = Color( 0.14902, 0.14902, 0.211765, 1 )

[node name="Title" type="Label" parent="HowToPlay/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.0
margin_top = 23.0
margin_right = 82.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "How to Play"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HowToPlay/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.0
margin_top = -130.0
margin_right = 267.0
margin_bottom = 118.0
custom_fonts/normal_font = SubResource( 4 )
text = "WASD: Control the player
E or Left Click: Use the equipped tool
Z or X: Switch equipped item
C: Cancel equipped item
ESC: Pause
Enter or Return: Show player's statistics

WARNING: The game progress will not be saved when return to main menu."

[node name="Back" type="Button" parent="HowToPlay/ColorRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 76.0
margin_top = -78.5
margin_right = 184.0
margin_bottom = -34.5
custom_fonts/font = SubResource( 5 )
text = "Back"

[node name="SettingsUI" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.0
margin_top = -216.5
margin_right = 343.0
margin_bottom = 216.5
color = Color( 0.14902, 0.14902, 0.211765, 1 )

[node name="Title" type="Label" parent="Credits/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.0
margin_top = 23.0
margin_right = 82.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "Credits"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.0
margin_top = -130.0
margin_right = 267.0
margin_bottom = 118.0
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[b]Models[/b]:
Ground model: [i]Free Low Poly Nature Forest by Pure Poly via Unity Asset Store (Modified)[/i]
Leek: [i]Leek by sharkbitestudios via Sketchfab[/i]
Corn Plant: [i]Corn Field v1 by printable_models via Free3D (Modified)[/i]
Watering Can: [i]Watering Can by animatedheaven via Free3D (Modified)[/i]


[b]Music and SE[/b]:
Main Menu: [i]comic5 by Hoerspielwerkstatt HEF via pixabay[/i]
Gameplay: [i]Eilegeiya by SamuelFrancisJohnson via pixabay[/i]
Hoe: [i]hoe sound effect free - Efek suara cangkul by via Youtube (Modified)[/i]
Watering Can: [i]Watering Plants by Angellu16 via pixabay (Modified)[/i]"
text = "Models:
Ground model: Free Low Poly Nature Forest by Pure Poly via Unity Asset Store (Modified)
Leek: Leek by sharkbitestudios via Sketchfab
Corn Plant: Corn Field v1 by printable_models via Free3D (Modified)
Watering Can: Watering Can by animatedheaven via Free3D (Modified)


Music and SE:
Main Menu: comic5 by Hoerspielwerkstatt HEF via pixabay
Gameplay: Eilegeiya by SamuelFrancisJohnson via pixabay
Hoe: hoe sound effect free - Efek suara cangkul by Kaoka Studio via Youtube (Modified)
Watering Can: Watering Plants by Angellu16 via pixabay (Modified)"

[node name="Back" type="Button" parent="Credits/ColorRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 76.0
margin_top = -78.5
margin_right = 184.0
margin_bottom = -34.5
custom_fonts/font = SubResource( 5 )
text = "Back"

[node name="BGMusicMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="Main/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="HowToPlay/ColorRect/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Credits/ColorRect/Back" to="." method="_on_Back_pressed"]
